# segytools

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/segytools/: index.doctree
.github/workflows/: docs.yml  publish.yml  test.yml
_modules/: index.html
_modules/segytools/: segy_abstract_header.html  segy_file_header.html  segy_header_item.html  segy_trace_header.html  toolkit.html  utils.html
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/segytools/: index.rst.txt
autoapi/: index.html
autoapi/segytools/: index.html
autoapi/segytools/datatypes/: index.html
autoapi/segytools/segy_abstract_header/: index.html
autoapi/segytools/segy_file_header/: index.html
autoapi/segytools/segy_header_item/: index.html
autoapi/segytools/segy_trace_header/: index.html
autoapi/segytools/toolkit/: index.html
autoapi/segytools/utils/: index.html
docs/: conf.py  requirements.txt
examples/: segy_headers_to_dataframe.py
examples/poland2D/: README.md  first_ffid.py  line001_001_textheader.ipynb  line001_002_fileheader.ipynb  line001_003_check_numsmp_consistency.ipynb  line001_004_drop_aux_channels.ipynb  line001_005_check_geometry.ipynb  line001_006_apply_geometry_write.ipynb  line001_007_read_view_data.ipynb  poland2D_analysis.ipynb  poland2d_context.py
examples/poland2D/data/: poland2d_example_ffid_231.sgy
examples/poland2D/positioning/: __init__.py  rps_parser.py  sps_parser.py  xps_parser.py
src/segytools/: __init__.py  datatypes.py  ibm_float.py  segy_abstract_header.py  segy_file_header.py  segy_header_item.py  segy_trace_header.py  toolkit.py  tools.py  utils.py
tests/: context.py  test_segy_file_header.py  test_segy_header_item.py  test_segy_trace_header.py  test_toolkit.py
(+19 files in other folders)
