[tool.poetry]
name = "segytools"
version = "0.1.0"
description = "low level toolkit for manipulating and analyzing segy formatted data"
authors = ["anthonytorlucci <anthonytorlucci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
