[tool.poetry]
name = "segytools"
version = "0.1.2a1"
description = "low level toolkit for manipulating and analyzing segy formatted data"
authors = ["anthonytorlucci <anthonytorlucci@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
ibm2ieee = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.12.0"


[tool.poetry.group.examples.dependencies]
pandas = "^2.0.2"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
